# zkbugbounty

./: .gitignore  .gitmodules  IHackVerifier.sol  README.md  ZkBugBounty.sol
circuits/: Cargo.toml
circuits/src/: contract_circuits.rs  generate.rs  main.rs  test_circuits.rs
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: Hello.sol  IStateTransitionVerifier.sol  ZkBugBounty.sol
contracts/scripts/: deploy.js
